--- a/sql_make_file_with_dataframe.ipynb
+++ b/sql_make_file_with_dataframe.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
-    "sqlite3.connect('PV1_real_nowcasting')"
+    "sqlite3.connect('outputDB')"
    ]
   },
   {
