--- a/sql_make_file_with_dataframe.ipynb
+++ b/sql_make_file_with_dataframe.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "c.execute('''\n",
     "          CREATE TABLE IF NOT EXISTS nowcasting\n",
-    "          ([datetime_UTC] datetime PRIMARY KEY, [GHImeasurment] INTEGER, [Forecasting_3min] INTEGER, [Forecasting_5min] INTEGER, [Forecasting_10min] INTEGER)\n",
+    "          ([datetime_UTC] datetime PRIMARY KEY, [GHImeasurment] INTEGER, [F_3min] INTEGER, [F_5min] INTEGER, [F_10min] INTEGER)\n",
     "          ''')\n",
     "          \n",
     "conn.commit()\n",
@@ -57,11 +57,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecasting_df = pd.read_csv(\"Performance.csv\")\n",
-    "datetime = forecasting_df[\"date\"].values\n",
-    "forecasting_3min = forecasting_df[\"Forecasting 3 min\"].values\n",
-    "forecasting_5min = forecasting_df[\"Forecasting 5 min\"].values\n",
-    "forecasting_10min = forecasting_df[\"Forecasting 10 min\"].values"
+    "df = pd.read_csv(\"Performance.csv\")\n",
+    "datetime = df[\"date\"].values\n",
+    "f_3min = df[\"F3 min\"].values\n",
+    "f_5min = df[\"F5 min\"].values\n",
+    "f_10min = df[\"F10 min\"].values"
    ]
   },
   {
@@ -80,16 +80,16 @@
     }
    ],
    "source": [
-    "for i in range(len(forecasting_3min)):\n",
+    "for i in range(len(f_3min)):\n",
     "    mydatetime = f'{datetime[i]}'\n",
-    "    forecasting_3min_1= f'{forecasting_3min[i]}'\n",
-    "    forecasting_5min_1 = f'{forecasting_5min[i]}'\n",
-    "    forecasting_10min_1= f'{forecasting_10min[i]}'\n",
+    "    f_3min_1= f'{f_3min[i]}'\n",
+    "    f_5min_1 = f'{f_5min[i]}'\n",
+    "    f_10min_1= f'{f_10min[i]}'\n",
     "    import sqlite3\n",
     "    conn = sqlite3.connect('test_database') \n",
     "    cur = conn.cursor()\n",
-    "    sql = ''' insert into nowcasting(datetime_UTC, GHImeasurment, Forecasting_3min, Forecasting_5min, Forecasting_10min) values (?, ?, ?, ?, ?)'''\n",
-    "    project = (mydatetime, None, forecasting_3min_1,forecasting_5min_1, forecasting_10min_1 )\n",
+    "    sql = ''' insert into nowcasting(datetime_UTC, datameasurment, F_3min, F_5min, F_10min) values (?, ?, ?, ?, ?)'''\n",
+    "    project = (mydatetime, None, f_3min_1,f_5min_1, f_10min_1 )\n",
     "    cur.execute(sql, project)\n",
     "    conn.commit()\n",
     "\n",
