--- a/download_from_websites.ipynb
+++ b/download_from_websites.ipynb
@@ -15,8 +15,8 @@
     "    today = date.today().isoformat()\n",
     "    next_day = pd.to_datetime(today) - timedelta(days = i)\n",
     "    next_day = f\"{next_day}\"[:10]\n",
-    "    file_url = f\"http://mic2000.promes.cnrs.fr/donneesMeteo/archives/export.php?type=csv&jour={next_day}&capteurs=4&debH=4&debM=0&finH=20&finM=0&moyennage=1&DB=meteo\"\n",
-    "    with open(f\"/home/hossein/Nowcasting_new/development/measurement_Odeillo/daily_ghi/{next_day}.csv\",'wb') as f:\n",
+    "    file_url = f\"****",
+    "    with open(f\"****",'wb') as f:\n",
     "\n",
     "        f.write(r.content)"
    ]
